k8s/services/jitsi/extra/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - meet.lama-corp.space
    - meet.sdlh.eu
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: jitsi-meet-web
          port: 80
